; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_pack-objects.c_option_parse_unpack_unreachable.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_pack-objects.c_option_parse_unpack_unreachable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.option = type { i32 }

@unpack_unreachable = common dso_local global i32 0, align 4
@unpack_unreachable_expiration = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.option*, i8*, i32)* @option_parse_unpack_unreachable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @option_parse_unpack_unreachable(%struct.option* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.option*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.option* %0, %struct.option** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %3
  store i32 0, i32* @unpack_unreachable, align 4
  store i64 0, i64* @unpack_unreachable_expiration, align 8
  br label %17

10:                                               ; preds = %3
  store i32 1, i32* @unpack_unreachable, align 4
  %11 = load i8*, i8** %5, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %10
  %14 = load i8*, i8** %5, align 8
  %15 = call i64 @approxidate(i8* %14)
  store i64 %15, i64* @unpack_unreachable_expiration, align 8
  br label %16

16:                                               ; preds = %13, %10
  br label %17

17:                                               ; preds = %16, %9
  ret i32 0
}

declare dso_local i64 @approxidate(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
